# py-sync-settings

./: .gitignore  CLAUDE.md  README.md  all-repos.txt  blueline.csv  changed-repos.txt  exclude-dirs.csv  exclude-for-pull.csv  main.py  pull-repos.txt  push-repos.txt  pyproject.toml  requirements.txt
classes/: Command.py  CsvHandler.py  GitManager.py  Mgitstatus.py  ReposFiles.py
data/: last-modified-dirs.txt
libs/: buffer.py  createDir.py  createFile.py  createMyScssFile.py  getLayoutPath.py  hasInFile.py  layoutToFile.py  richTable.py
modules/: addChangedReposToFile.py  checkForGitDir.py  checkIfPullNeeded.py  checkIfPushNeeded.py  getCommits.py  getLocalProjects.py  getMgitstatusFiles.py  gitClone.py  gitCommit.py  gitCommitToBuffer.py  gitPull.py  gitPullAll.py  gitPush.py  gitPushAll.py  removeFileFromGitCache.py  reposToFile.py  syncGit.py
utils/: decryptFiles.py  encryptFiles.py  tableMenu.py
