[project]
name = "my_project"
version = "0.1.0"
description = ""
dependencies = [
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "markdown-it-py==3.0.0",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mypy-extensions==1.1.0",
    "pathspec==0.12.1",
    "plyer==2.1.0",
    "pycodestyle==2.13.0",
    "pyflakes==3.3.2",
    "pyfzf==0.3.1",
    "pygments==2.18.0",
    "pyperclip==1.9.0",
    "rich==13.8.1",
    "ruff>=0.12.2",
    "smmap==5.0.1",
    "typing-extensions==4.14.0",
]
[tool.ruff]
line-length = 88
exclude = [
    "migrations",
    "tests",
    "docs",
    "build",
    "dist",
    "venv",
    ".venv",
    ".git",
    "__pycache__",
]
fix = true
unsafe-fixes = true
target-version = "py312"  # <- specify Python 3.12 explicitly here

[tool.ruff.lint]
select = [
    "F401",  # Unused import
    "F403",  # Wildcard import
    "F405",  # Name may be undefined, or defined from star imports
    "F841",  # Local variable is assigned to but never used
    "E501",  # Line too long
    "I",     # Import sorting (isort-compatible)
]
